# kivy-mobile-builder

./: .gitignore  kivy3.patch  kivy_master_build_ios_wheels.sh
.ci/: ios_frameworks.sh
examples/: maturin_build.sh
other_scripts/sdl/sdl2/kivy_sdl2/: pyproject.toml
other_scripts/sdl/sdl2/kivy_sdl2/src/SDL2.xcframework/ios-arm64/SDL2.framework/: Info.plist  SDL2  default.metallib
other_scripts/sdl/sdl2/kivy_sdl2/src/SDL2.xcframework/ios-arm64_x86_64-simulator/SDL2.framework/: Info.plist  SDL2  default.metallib
other_scripts/sdl/sdl2/kivy_sdl2/src/SDL2.xcframework/ios-arm64_x86_64-simulator/SDL2.framework/_CodeSignature/: CodeResources
other_scripts/sdl/sdl2/kivy_sdl2/src/SDL2_image.xcframework/ios-arm64/SDL2_image.framework/: Info.plist  SDL2_image
other_scripts/sdl/sdl2/kivy_sdl2/src/SDL2_image.xcframework/ios-arm64/SDL2_image.framework/Headers/: SDL_image.h
other_scripts/sdl/sdl2/kivy_sdl2/src/SDL2_image.xcframework/ios-arm64_x86_64-simulator/SDL2_image.framework/: Info.plist  SDL2_image
other_scripts/sdl/sdl2/kivy_sdl2/src/SDL2_mixer.xcframework/ios-arm64/SDL2_mixer.framework/: Info.plist  SDL2_mixer
other_scripts/sdl/sdl2/kivy_sdl2/src/SDL2_mixer.xcframework/ios-arm64_x86_64-simulator/SDL2_mixer.framework/: Info.plist  SDL2_mixer
other_scripts/sdl/sdl2/kivy_sdl2/src/SDL2_ttf.xcframework/ios-arm64/SDL2_ttf.framework/: Info.plist  SDL2_ttf
other_scripts/sdl/sdl2/kivy_sdl2/src/SDL2_ttf.xcframework/ios-arm64_x86_64-simulator/SDL2_ttf.framework/: Info.plist  SDL2_ttf
other_scripts/sdl/sdl3/kivy-sdl3-angle/: pyproject.toml
(+32 files in other folders)
