[project]
name = "kivy-sdl2"
version = "2.3.10"
description = "SDL2 components for Kivy"
readme = "README.md"
authors = [
    
]
requires-python = ">=3.11"
dependencies = []



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/SDL2.xcframework",
    "src/SDL2_image.xcframework",
    "src/SDL2_mixer.xcframework",
    "src/SDL2_ttf.xcframework",
]