[project]
name = "kivy-sdl3-angle"
version = "3.0.0.0"
description = "SDL3 components for Kivy"
readme = "README.md"
authors = [
    
]
requires-python = ">=3.11"
dependencies = []



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/SDL3.xcframework",
    "src/SDL3_image.xcframework",
    "src/SDL3_mixer.xcframework",
    "src/SDL3_ttf.xcframework",
    "src/libEGL.xcframework",
    "src/libGLESv2.xcframework",
]